--- a/项目经理-技术经理.md
+++ b/项目经理-技术经理.md
@@ -8,20 +8,20 @@
 
 ## 项目经理（Project Manager）
 
-1、项目组日常管理工作。
-2、组织项目组成员对项目规模、工作量、工期进行估计。
-3、制订相应的执行计划，解决阻碍项目开展的矛盾和问题，以保障项目能够按照执行计划顺利进行。
-4、定义项目目标。在特定技术、费用和时间的限制下，协调组织中的各种资源达成项目目标。
-5、与客户、领导、市场人员进行沟通。向外界提供项目的可视性，如工作进度、质量状况等。
-6、监督和控制项目的进度、效率和风险。
-7、根据使命、目标和需求来进行项目范围管理。
-8、按照项目计划组织项目验收。
-9、与质量保障人员配合，组织实施切实可行的质量体系，以保证项目产物的质量。
+1. 项目组日常管理工作。
+2. 组织项目组成员对项目规模、工作量、工期进行估计。
+3. 制订相应的执行计划，解决阻碍项目开展的矛盾和问题，以保障项目能够按照执行计划顺利进行。
+4. 定义项目目标。在特定技术、费用和时间的限制下，协调组织中的各种资源达成项目目标。
+5. 与客户、领导、市场人员进行沟通。向外界提供项目的可视性，如工作进度、质量状况等。
+6. 监督和控制项目的进度、效率和风险。
+7. 根据使命、目标和需求来进行项目范围管理。
+8. 按照项目计划组织项目验收。
+9. 与质量保障人员配合，组织实施切实可行的质量体系，以保证项目产物的质量。
 
 ## 技术经理（Software Architect）
 
-1、领导与协调整个项目中的技术活动（分析、设计和编码等）。
-2、推动主要的技术决策。
-3、负责项目团队成员技术能力培养。
-4、负责组织团队成员进行项目涉及技术的可行性研究。
-5、评价、确认并文档化软件架构。 部门主管的工作就更简单不过了，审核项目经理的项目计划，部门技术方向决策，人员管理了，部门间的会议，你根本没有时间去研究技术，以上的各种工作将填满你的工作表。
+1. 领导与协调整个项目中的技术活动（分析、设计和编码等）。
+2. 推动主要的技术决策。
+3. 负责项目团队成员技术能力培养。
+4. 负责组织团队成员进行项目涉及技术的可行性研究。
+5. 评价、确认并文档化软件架构。 部门主管的工作就更简单不过了，审核项目经理的项目计划，部门技术方向决策，人员管理了，部门间的会议，你根本没有时间去研究技术，以上的各种工作将填满你的工作表。
